--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <h1>Hello-Bootstrap</h1>
 
     <h2>My protfolio</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nesciunt expedita possimus quia? Quidem
+        accusantium quis animi voluptatibus maiores aperiam id repudiandae eius exercitationem esse, veritatis ad quod
+        doloribus aliquam?</p>
 </body>
 
 </html>
